--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <p>Простая разметка для проверки коммита</p>
+    </div>
     
 </body>
 </html>
